--- a/about.html
+++ b/about.html
@@ -1,132 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About Us & ERD • US States Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>About — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav7">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav7">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
+      <div id="navBar" class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About / ERD</a></li>
+          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
         </ul>
-
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <a class="btn btn-outline-light btn-sm" href="README.md" target="_blank">README (Tech)</a>
       </div>
     </div>
   </nav>
 
-  <main class="py-5">
-    <div class="container">
-
-      <h2 class="h4 fw-bold mb-4">Team & Project</h2>
-
-      <div class="row g-4">
-        <div class="col-md-6">
-          <div class="card rounded-4 h-100">
-            <div class="card-body">
-              <div class="section-heading mb-2">Team Members</div>
-              <ul class="list-unstyled small mb-0">
-                <li><strong>Mohamed Faisal Sindhi</strong> — Frontend & Integration  
-                  <div class="small-muted">Built HTML structure, deployment, chatbot integration, hosting.</div>
-                </li>
-                <li class="mt-2"><strong>Hongxu Yang</strong> — UI/UX & Styling  
-                  <div class="small-muted">Dark mode, responsive layout, visual design, ERD diagram.</div>
-                </li>
-                <li class="mt-2"><strong>Jonathan James</strong> — JavaScript & Data  
-                  <div class="small-muted">CRUD logic, Chart.js visualizations, localStorage persistence.</div>
-                </li>
-              </ul>
-            </div>
+  <main class="container py-4">
+    <div class="card p-4">
+      <h4 class="mb-3">About Us</h4>
+      <div class="row g-3">
+        <div class="col-md-4">
+          <div class="card p-3 h-100">
+            <h5 class="mb-1">Mohamed Faisal Sindhi</h5>
+            <div class="muted">Frontend, deployment, chatbot</div>
           </div>
-        </div><!-- col -->
-
-        <div class="col-md-6">
-          <div class="card rounded-4 h-100">
-            <div class="card-body">
-              <div class="section-heading mb-2">GitHub Repository</div>
-              <p class="small text-secondary mb-3">
-                Our source code and commit history are documented here.
-                The README also explains our architecture (MVC), API usage,
-                and data persistence through localStorage.
-              </p>
-              <a class="btn btn-primary btn-sm"
-                 target="_blank"
-                 rel="noopener"
-                 href="https://github.com/MdFaisalS2025/us-states-dashboard">
-                Open GitHub Repo
-              </a>
-            </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 h-100">
+            <h5 class="mb-1">Hongxu Yang</h5>
+            <div class="muted">UI/UX, ERD & docs</div>
           </div>
-        </div><!-- col -->
-      </div><!-- row -->
-
-      <hr class="my-5" />
-
-      <h3 class="h5 fw-bold mb-3">Logical / Data Model (ERD)</h3>
-      <p class="small-muted mb-4">
-        Our application models two main one-to-many relationships: 
-        <strong>Region → State</strong> and <strong>State → City</strong>.
-        In production, this would live in a database. In our prototype, the <code>State</code>
-        records are stored in <code>localStorage</code> and drive CRUD + charts.
-      </p>
-
-      <div class="card rounded-4 shadow-sm p-3 overflow-auto mb-3">
-        <img src="assets/logical_data_model_v3.png" alt="ERD Diagram" style="max-width:100%;height:auto;border-radius:1rem;">
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 h-100">
+            <h5 class="mb-1">Jonathan James</h5>
+            <div class="muted">Controllers, charts, data service</div>
+          </div>
+        </div>
       </div>
 
-      <div class="small-muted">
-        <strong>Region</strong> (Region_ID PK) → <strong>State</strong> (State_ID PK, Region_ID FK) → <strong>City</strong> (City_ID PK, State_ID FK). <br>
-        We persist <code>State</code> objects locally (id, name, region, capital, population, gdp, area, citiesCount).
-        That same data powers our table view, our charts, and even the chatbot knowledge base.
-      </div>
+      <hr class="my-4"/>
 
-    </div><!-- container -->
+      <h5 class="mb-2">Data Model (ERD)</h5>
+      <img src="assets/logical_data_model_v3.png" class="img-fluid rounded" alt="ERD diagram"/>
+
+      <div class="mt-3">
+        <a class="btn btn-accent" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repo</a>
+        <a class="btn btn-outline-light ms-2" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
+      </div>
+    </div>
   </main>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center">
-      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
-      <div class="small-muted">
-        <a href="index.html">Home</a> •
-        <a href="data.html">Charts</a> •
-        <a href="read.html">Data Table</a>
-      </div>
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">About page + ERD + Roles</span>
     </div>
   </footer>
 
-  <!-- scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
-  <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
-  <script src="assets/charts.js"></script>
-  <script src="assets/api.js"></script>
-  <script src="assets/app.js"></script>
-
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
