--- a/data.html
+++ b/data.html
@@ -1,39 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data & Charts • US States</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>Charts — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States</a>
-      <div class="collapse navbar-collapse">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
+      <div id="navBar" class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link active" href="data.html">Data & Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
+          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
+          <li class="nav-item"><a class="nav-link active" href="data.html">Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <a class="btn btn-outline-light btn-sm" href="index.html">Home</a>
       </div>
     </div>
   </nav>
 
-  <main class="container py-5">
-    <h2 class="mb-4 text-center">Interactive Charts</h2>
-    <div class="row g-4">
-      <div class="col-md-6"><canvas id="chartPopulation"></canvas></div>
-      <div class="col-md-6"><canvas id="chartGDP"></canvas></div>
-      <div class="col-md-12"><canvas id="chartArea"></canvas></div>
+  <main class="container py-4">
+    <div class="row g-3">
+      <div class="col-lg-4">
+        <div class="card p-3">
+          <h5 class="mb-2">Population Share (Top 6)</h5>
+          <canvas id="chartPopulation" height="200"></canvas>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card p-3">
+          <h5 class="mb-2">GDP by State (Top 8)</h5>
+          <canvas id="chartGDP" height="200"></canvas>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card p-3">
+          <h5 class="mb-2">Land Area (Top 10)</h5>
+          <canvas id="chartArea" height="200"></canvas>
+        </div>
+      </div>
     </div>
+
+    <div class="mt-4" id="apiInsight"></div>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="assets/app.js"></script>
-  <script src="assets/charts.js"></script>
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">Charts auto-refresh after CRUD</span>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js" defer></script>
+  <script type="module">
+    import { renderAllCharts } from "./assets/charts.js";
+    import { renderApiInsight } from "./assets/api.js";
+    import "./assets/model.js";
+    renderAllCharts();
+    renderApiInsight("apiInsight");
+  </script>
+
+  <!-- Botpress -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
