--- a/delete.html
+++ b/delete.html
@@ -1,89 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Delete State • US States Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>Delete State — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav6">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav6">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
+      <div id="navBar" class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item active" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
+          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+          <li class="nav-item"><a class="nav-link active" href="delete.html">Delete</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         </ul>
-
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <a class="btn btn-outline-light btn-sm" href="read.html">Back</a>
       </div>
     </div>
   </nav>
 
-  <main class="py-5">
-    <div class="container" style="max-width:600px;">
-      <h2 class="h4 fw-bold mb-3">Delete State</h2>
-      <p class="small-muted mb-4">
-        Enter a State ID (2-letter code) and click Delete. This removes the record from localStorage.
-      </p>
+  <main class="container py-4">
+    <div class="card p-4">
+      <h4 class="mb-3">Delete a State</h4>
+      <p class="text-warning">This action cannot be undone.</p>
 
-      <div class="card rounded-4 shadow-sm p-4">
-        <div class="row g-3 align-items-end">
-          <div class="col-md-6">
-            <label class="form-label small">State ID</label>
-            <input id="del_id" class="form-control form-control-sm" placeholder="CA">
-          </div>
-          <div class="col-md-6">
-            <button id="deleteBtn" class="btn btn-danger btn-sm w-100">Delete</button>
+      <form id="deleteForm" class="row g-3">
+        <div class="col-md-6">
+          <label class="form-label">Choose by ID</label>
+          <select id="idSelect" name="id" class="form-select"></select>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Or enter ID manually</label>
+          <input class="form-control" name="id" placeholder="CA"/>
+        </div>
+
+        <div class="col-12">
+          <div class="alert alert-dark mb-0">
+            You are about to delete: <strong id="deletePreview">Select a record below.</strong>
           </div>
         </div>
 
-        <div class="d-flex gap-2 mt-4">
-          <a class="btn btn-outline-secondary btn-sm" href="read.html">Back to Table</a>
+        <div class="col-12 d-flex gap-2">
+          <button class="btn btn-danger" type="submit">Delete</button>
+          <a class="btn btn-outline-light" href="read.html">Cancel</a>
         </div>
-      </div>
+      </form>
     </div>
   </main>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center">
-      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
-      <div class="small-muted"><a href="read.html">View Data</a></div>
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">Delete (CRUD D)</span>
     </div>
   </footer>
 
-  <!-- scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
-  <script src="assets/charts.js"></script>
-  <script src="assets/api.js"></script>
-  <script src="assets/app.js"></script>
-
-  <script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script type="module">
+    import { initDeletePage } from "./assets/controller.js";
+    import "./assets/model.js";
     initDeletePage();
   </script>
 
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
