--- a/index.html
+++ b/index.html
@@ -1,52 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>US States Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>US States Dashboard — Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body class="bg-gradient">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm">
+<body>
+  <!-- Nav -->
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States</a>
-      <div class="collapse navbar-collapse">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navBar" class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="read.html">Read</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
+          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
+          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         </ul>
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <a class="btn btn-outline-light btn-sm" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div>
   </nav>
 
-  <header class="container py-5 text-center">
-    <h1 class="fw-bold mb-3">U.S. States Data Dashboard</h1>
-    <p class="text-muted lead">Explore population, GDP, and more with live API insights and full CRUD functionality.</p>
-    <a href="data.html" class="btn btn-primary btn-lg mt-3">View Data Visualizations</a>
-  </header>
+  <main class="container py-4">
+    <div class="row g-3 align-items-stretch">
+      <div class="col-md-4">
+        <div class="card p-3 h-100">
+          <h5 class="mb-1">Total Population</h5>
+          <div id="kpiTotalPop" class="display-6 fw-bold">—</div>
+          <div class="muted">Across all states in the dataset</div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 h-100">
+          <h5 class="mb-1">Total GDP</h5>
+          <div id="kpiTotalGDP" class="display-6 fw-bold">—</div>
+          <div class="muted">Aggregate (USD)</div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 h-100">
+          <h5 class="mb-1">Total Land Area</h5>
+          <div id="kpiTotalArea" class="display-6 fw-bold">—</div>
+          <div class="muted">km²</div>
+        </div>
+      </div>
+    </div>
 
-  <div class="container my-5" id="apiInsightBox"></div>
+    <div class="my-4" id="apiInsight"></div>
 
-  <footer class="py-4 border-top mt-5">
-    <div class="container text-center small">
-      © 2025 US States Dashboard | Built with ❤️ by Faisal, Hongxu, & Jonathan
+    <div class="card p-4 mt-4">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="mb-0">Get Started</h4>
+        <a href="create.html" class="btn btn-accent">Add a State</a>
+      </div>
+      <p class="mt-3 text-muted-2">Use CRUD pages to manage records. Charts update automatically.</p>
+    </div>
+  </main>
+
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/app.js"></script>
-  <script src="assets/api.js"></script>
+  <!-- Libs -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js" defer></script>
+  <!-- App -->
+  <script type="module">
+    import { renderAllCharts } from "./assets/charts.js";
+    import { renderApiInsight } from "./assets/api.js";
+    import { initHomeKPIs } from "./assets/controller.js";
+    import "./assets/model.js"; // ensure DB loads
+    initHomeKPIs();
+    renderAllCharts();
+    renderApiInsight("apiInsight");
+  </script>
+
+  <!-- Botpress: on every page -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
