--- a/mybot.html
+++ b/mybot.html
@@ -1,97 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>StateBot Chat • US States Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>Bot — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav8">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="mainNav8">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link active" href="mybot.html">Chatbot</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
-        </ul>
-
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
-      </div>
     </div>
   </nav>
 
-  <main class="py-5">
-    <div class="container" style="max-width:800px;">
-      <div class="card rounded-4 shadow-sm">
-        <div class="card-body">
-          <h2 class="h5 fw-bold mb-3">StateBot (Botpress)</h2>
-          <p class="small text-secondary mb-4">
-            StateBot can answer questions about U.S. states in our dataset.
-            It uses a Botpress Table with fields like State ID, Name, Region, Capital,
-            Population, GDP, and Area. The bot workflow goes from Start → Autonomous
-            with Search Knowledge enabled, and it is embedded directly into this page.
-          </p>
-
-          <div class="small-muted mb-4">
-            Example questions you can ask:
-            <ul class="small mb-2">
-              <li>What is the capital of Texas?</li>
-              <li>Which state has the highest GDP?</li>
-              <li>Which region is Florida in?</li>
-            </ul>
-          </div>
-
-          <p class="small-muted">
-            The floating chat bubble (bottom right) is live and connected to Botpress.
-          </p>
-        </div>
-      </div>
+  <main class="container py-5">
+    <div class="card p-5 text-center">
+      <h4 class="mb-2">Chat with StateBot</h4>
+      <p class="text-muted-2 mb-0">The chat widget appears in the corner on every page.</p>
     </div>
   </main>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center">
-      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
-      <div class="small-muted">
-        <a href="index.html">Home</a> •
-        <a href="read.html">Data Table</a> •
-        <a href="about.html">Team & ERD</a>
-      </div>
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">Botpress embedded</span>
     </div>
   </footer>
 
-  <!-- scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
-  <script src="assets/charts.js"></script>
-  <script src="assets/api.js"></script>
-  <script src="assets/app.js"></script>
-
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <!-- Botpress -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
-
-
-
