--- a/read.html
+++ b/read.html
@@ -1,105 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>US States Dashboard • Data Table (Read)</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8"/>
+  <title>US States — Read (Table)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow-sm border-bottom">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav3">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="mainNav3">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Data & Charts</a></li>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
+      <div id="navBar" class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item"><a class="nav-link active" href="read.html">Data Table</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">CRUD</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="create.html">Create</a></li>
-              <li><a class="dropdown-item" href="update.html">Update</a></li>
-              <li><a class="dropdown-item" href="delete.html">Delete</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="mybot.html">Chatbot</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About / ERD</a></li>
+          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
+          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         </ul>
-
-        <button id="toggleTheme" class="btn btn-outline-secondary btn-sm">🌙 Dark</button>
+        <a class="btn btn-outline-light btn-sm" href="index.html">Home</a>
       </div>
     </div>
   </nav>
 
-  <main class="py-5">
-    <div class="container">
-      <h2 class="h4 fw-bold mb-4">Current State Data</h2>
+  <main class="container py-4">
+    <div class="d-flex flex-wrap gap-2 align-items-center mb-3">
+      <input id="searchInput" class="form-control" style="max-width: 320px" placeholder="Search name, id, capital"/>
+      <select id="regionFilter" class="form-select" style="max-width: 200px">
+        <option value="ALL">All Regions</option>
+        <option value="NE">Northeast</option>
+        <option value="MW">Midwest</option>
+        <option value="S">South</option>
+        <option value="W">West</option>
+      </select>
+      <a class="btn btn-accent ms-auto" href="create.html">+ Add State</a>
+    </div>
 
-      <div class="table-responsive card rounded-4">
-        <table class="table mb-0 align-middle">
-          <thead class="table-light">
+    <div class="card p-0">
+      <div class="table-responsive">
+        <table class="table align-middle mb-0">
+          <thead>
             <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Region</th>
-              <th>Capital</th>
-              <th>Population</th>
-              <th>GDP</th>
-              <th>Area</th>
-              <th># Cities</th>
+              <th>ID</th><th>Name</th><th>Capital</th><th>Population</th><th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th class="text-end">Actions</th>
             </tr>
           </thead>
-          <tbody id="statesTableBody">
-            <!-- populated by refreshReadTable() -->
-          </tbody>
+          <tbody id="statesTableBody"></tbody>
         </table>
       </div>
-
-      <p class="small-muted mt-3">
-        This table is powered by localStorage. Any Create / Update / Delete will change what you see here.
-      </p>
-
-      <div class="mt-4">
-        <a class="btn btn-sm btn-primary" href="create.html">Add New State</a>
-        <a class="btn btn-sm btn-outline-secondary" href="update.html">Edit State</a>
-        <a class="btn btn-sm btn-outline-danger" href="delete.html">Delete State</a>
+      <div class="p-3 d-flex justify-content-between">
+        <small id="rowCount" class="text-muted-2">0 record(s)</small>
+        <div>
+          <a class="btn btn-outline-light btn-sm" href="data.html">View Charts</a>
+        </div>
       </div>
     </div>
   </main>
 
-  <footer class="py-4 border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center">
-      <div class="small-muted">© 2025 U.S. States Data Dashboard</div>
-      <div class="small-muted">
-        <a href="index.html">Home</a> •
-        <a href="about.html">Team & ERD</a>
-      </div>
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between">
+      <span>© 2025 US States Dashboard</span>
+      <span class="text-muted-2">Read view (CRUD R)</span>
     </div>
   </footer>
 
-  <!-- scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
-  <script src="assets/charts.js"></script>
-  <script src="assets/api.js"></script>
-  <script src="assets/app.js"></script>
-
-  <script>
-    refreshReadTable();
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script type="module">
+    import { refreshReadTable } from "./assets/controller.js";
+    import "./assets/model.js";
+    const run = () => refreshReadTable();
+    document.getElementById("searchInput").addEventListener("input", run);
+    document.getElementById("regionFilter").addEventListener("change", run);
+    run();
   </script>
 
-  <!-- Chat bubble -->
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/YOUR-BOTPRESS-CONFIG.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
